--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Godothub",
   "main": "godothub.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "godothub -t"
   },
   "repository": {
     "type": "git",
